fixed issue on announcements expanded version -- read more not showing the right data

--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -1,3 +1,7 @@
 * {
   font-family: $font-family-roboto;
 }
+
+body {
+  scroll-behavior: smooth;
+}
